working network code

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,9 @@ framework = arduino
 monitor_speed = 115200
 
 ;build options
-build-flags = ; these are just compiler definitions
-    -DNODE_ID="RELAY_NODE_1" ; SSID for access point (this is used for dynamic node pairing also)
-    -DPASS="RELLAY_NETWORK_PASS" ; password for the rellay network (this is only needed for dynamic node pairing)
+build_flags=; these are just compiler definitions 
+    '-DNODE_ID="RELAY_NODE_1"' ; SSID for access point (this is used for dynamic node pairing also)
+    '-DPASS="RELLAY_NETWORK_PASS"' ; password for the rellay network (this is only needed for dynamic node pairing)
     -DCHANNEL=2 ; the channel the esp-now protocol will message trough
     -DENCRYPTION=1 ; if the esp-now packets should be encrypted
-    -DMAX_CONNECTIONS = 20 ; max number of connections per node
+    -DMAX_CONNECTIONS=20 ; max number of connections per node
