started writing the code for the caching system (it should seriously get revived by someone else then me)

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ monitor_speed = 115200
 build_flags=; these are just compiler definitions 
     -DCHANNEL=2 ; the channel the esp-now protocol will message trough
     -DENCRYPTION=1 ; if the esp-now packets should be encrypted
+    -DCACHE_STACK_LIMIT=100 ; the amount of traffic to cache before it starts to get deleted
