--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ framework = arduino
 monitor_speed = 115200
 
 ;build options
-build_flags=; these are just compiler definitions 
-    -DCHANNEL=2 ; the channel the esp-now protocol will message trough
-    -DENCRYPTION=1 ; if the esp-now packets should be encrypted
+build_flags=; these are just compiler definitions
+    -DCHANNEL=1 ; the channel the esp-now protocol will message trough
+    -DENCRYPTION=0 ; if the esp-now packets should be encrypted
     -DCACHE_STACK_LIMIT=100 ; the amount of traffic to cache before it starts to get deleted
+    -DDEBUG_MODE=1 ; to signifiy it should be compiled in debug mode
