brain_damage.exe

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ build_flags=; these are just compiler definitions
     -DENCRYPTION=0 ; if the esp-now packets should be encrypted
     -DCACHE_STACK_LIMIT=100 ; the amount of traffic to cache before it starts to get deleted
     -DDEBUG_MODE=1 ; to signifiy it should be compiled in debug mode
+    ;-DDEBUG_SENDER=1 ; if the node is a sender for debug purpouses
