stack not pushing fast enough add semaphores

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,5 @@ build_flags=; these are just compiler definitions
     -DCHANNEL=1 ; the channel the esp-now protocol will message trough
     -DENCRYPTION=0 ; if the esp-now packets should be encrypted
     -DCACHE_STACK_LIMIT=100 ; the amount of traffic to cache before it starts to get deleted
-    -DDEBUG_MODE=1 ; to signifiy it should be compiled in debug mode
-    ;-DDEBUG_SENDER=1 ; if the node is a sender for debug purpouses
+    ;-DDEBUG_MODE=1 ; to signifiy it should be compiled in debug mode
+    -DDEBUG_SENDER=1 ; if the node is a sender for debug purpouses
